# Implementation_Paper_GrabCut

./: CMakeLists.txt  GCApplication.cpp  GCApplication.h  GMM.cpp  GMM.h  GaussDistribution.cpp  GaussDistribution.h  GrabCut.cpp  GrabCut.h  Hiddens.h  ImageAccessor.cpp  ImageAccessor.h  MyUtility.h  MyUtilityOpenCV.cpp  MyUtilityOpenCV.h  main.cpp
